modules/sg_ec2/main.tf
# Create Security Group for every EC2 instance
resource "aws_security_group" "sg_ec2" {
  for_each = toset(var.environments_name)

  name        = "sg_ec2_${each.value}"
  description = "Security group for EC2 instance of the environment ${each.value}"

  vpc_id = var.vpc_id

  # Allow inbound traffic from HTTP 
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow inbound traffic from HTTPS 
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow inbound traffic on port 22 (SSH)
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow ALL for outbound traffic 
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
